<resources>
    <string name="app_name">AlDia</string>
    <string name="navigation_drawer_open">Abrir barra lateral</string>
    <string name="navigation_drawer_close">Cerrar barra lateral</string>
    <string name="nav_drawer_cerrar_sesion">Cerrar Sesión</string>
    <string name="nav_drawer_mi_perfil">Mi Perfil</string>
    <string name="nav_drawer_sesion">Sesión</string>
    <string name="nav_drawer_liquidaciones">Liquidaciones</string>
    <string name="error_autenticacion">Error de Autenticación</string>
    <string name="is_successful">is Successful </string>
    <string name="on_failure">onFailure </string>
    <string name="puesto">Puesto</string>
    <string name="monto_recaudado">Monto Recaudado</string>
    <string name="horas_regulares">Horas Regulares</string>
    <string name="horas_extra">Horas Extra</string>
    <string name="ltima_liquidaci_n">Última Liquidación</string>
    <string name="salida">Salida</string>
    <string name="Ingreso">Ingreso</string>
    <string name="per_odos_sin_liquidar">Períodos Sin Liquidar</string>
    <string name="periodos">Períodos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="liquidaciones">Liquidaciones</string>
    <string name="seleccionar_comercio">Seleccionar Comercio:</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="dni">DNI</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email">Email</string>
    <string name="no_existen_per_odos_para_mostrar">Sin Períodos para mostrar</string>
    <string name="periodo_eliminado">Período Eliminado por Administrador</string>
    <string name="hora_entrada">Hora Entrada</string>
    <string name="hora_salida">Hora Salida</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="chevron">chevron</string>
    <string name="deleted_shift">Período Eliminado</string>
    <string name="at">\u0020a las\u0020</string>
    <string name="logo">Logo</string>
    <string name="camera_scan">Camera Scan</string>
    <string name="hours_since_last_payment">Horas desde última liquidación:</string>
    <string name="shift_ending_notification_title">Período a punto de terminar</string>
    <string name="shift_ending_notification_body">Tu período está a punto de terminar, por favor recordá escanear al salir</string>
    <string name="error_conexion">Error de Conexión</string>
    <string name="error_servidor">Error al conectarse con servidor</string>
    <string name="sign_in_error">Hubo un problema al ingresar al servidor, te gustaría escanear el código para guardar tu horario de ingreso/salida?</string>
    <string name="error">Error</string>
    <string name="qr_scanned">Qr escaneado correctamente</string>
    <string name="button_to_confirm_entry_exit">Botón para confirmar entrada/salida</string>
    <string name="btn_scan_qr">Button para escanear código QR</string>

</resources>
