<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mi_perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_drawer_mi_perfil" />
        <item
            android:id="@+id/nav_periodos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_periodos" />

        <item
            android:id="@+id/nav_liquidaciones"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_liquidaciones" />

    </group>

    <item android:title="@string/nav_drawer_sesion">
        <menu>
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_cerrar_sesion" />
        </menu>
    </item>

</menu>
