<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.federico.aldiaapp.activities.EntryExitActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarEntryExit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@drawable/ingreso_background"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/tvEntryExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_entry_exit"
            tools:text="@string/Ingreso" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAccept"
        style="@style/fab"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/button_to_confirm_entry_exit"
        app:srcCompat="@drawable/ic_done_white_36px" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.federico.aldiaapp.activities.EntryExitActivity">

            <TextView
                android:id="@+id/tvBusinessName"
                style="@style/textViewDatosMain"
                android:layout_marginTop="@dimen/top_entry_exit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Wendy's" />

            <TextView
                android:id="@+id/positionTv"
                style="@style/textViewTitulosChicos"
                android:text="@string/puesto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBusinessName" />

            <TextView
                android:id="@+id/tvCategory"
                style="@style/textViewDatosMain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positionTv"
                tools:text="Cook 8hs" />

            <TextView
                android:id="@+id/horaIngresoTv"
                style="@style/textViewTitulosChicos"
                android:text="@string/hora_entrada"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

            <TextView
                android:id="@+id/tvEntryHour"
                style="@style/textViewDatosMain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horaIngresoTv"
                tools:text="19:22" />

            <TextView
                android:id="@+id/exitHourTv"
                style="@style/textViewTitulosChicos"
                android:text="@string/hora_salida"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEntryHour" />

            <TextView
                android:id="@+id/tvExitHour"
                style="@style/textViewDatosMain"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exitHourTv"
                tools:text="21:23" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
