<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<android.support.constraint.ConstraintLayout
    android:id="@+id/content_view_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.federico.aldiaapp.activities.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/tvCategoria"
        style="@style/textViewDatosMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puestoTv"
        tools:text="Cocinero 8hs" />

    <TextView
        android:id="@+id/tvRecaudado"
        style="@style/textViewDatosMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recaudaciontv"
        tools:text="$3650,87" />

    <TextView
        android:id="@+id/tvDataFromLastPaymentText"
        style="@style/textViewTitulosChicos"
        android:text="@string/hours_since_last_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaUltimaLiquidacion" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_top_titulos"
        android:layout_marginStart="@dimen/margin_top_titulos"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataFromLastPaymentText">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/viewHoursData"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/horasRegularestv"
                style="@style/textViewTitulosChicosCard"
                android:text="@string/horas_regulares"
                app:layout_constraintEnd_toStartOf="@+id/verticalLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHorasRegulares"
                style="@style/textViewDatosCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/horasRegularestv"
                app:layout_constraintStart_toStartOf="@+id/horasRegularestv"
                app:layout_constraintTop_toBottomOf="@+id/horasRegularestv"
                tools:text="20:30" />

            <View
                android:id="@+id/verticalLine"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/horasExtratv"
                style="@style/textViewTitulosChicosCard"
                android:text="@string/horas_extra"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verticalLine"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHorasExtra"
                style="@style/textViewDatosCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/horasExtratv"
                app:layout_constraintStart_toStartOf="@+id/horasExtratv"
                app:layout_constraintTop_toBottomOf="@+id/horasExtratv"
                tools:text="2:16" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/ultimaLiquidaciontv"
        style="@style/textViewTitulosChicos"
        android:text="@string/ltima_liquidaci_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecaudado" />

    <TextView
        android:id="@+id/tvFechaUltimaLiquidacion"
        style="@style/textViewDatosMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ultimaLiquidaciontv"
        tools:text="3 de marzo de 2018" />

    <TextView
        android:id="@+id/recaudaciontv"
        style="@style/textViewTitulosChicos"
        android:text="@string/monto_recaudado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />

    <TextView
        android:id="@+id/puestoTv"
        style="@style/textViewTitulosChicos"
        android:text="@string/puesto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
