<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:padding="1dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardElevation="6dp"
        app:contentPadding="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:id="@+id/tvTotalMoney"
                style="@style/textViewsTitulosLiquidacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$111214,80" />

            <TextView
                android:id="@+id/tvPaymentDate"
                style="@style/textViewsFechaLiquidacion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="10/03/18 - 20:15" />

            <TextView
                android:id="@+id/tvRegularHoursText"
                style="@style/textViewsTitulosChicosLiquidacion"
                android:layout_marginTop="@dimen/liquidacion_top_bottom"
                android:layout_marginEnd="16dp"
                android:text="@string/horas_regulares"
                app:layout_constraintEnd_toStartOf="@+id/chevronImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegularHoursValue"
                style="@style/textViewsValoresLiquidacion"
                android:layout_marginTop="@dimen/liquidacion_separacion"
                app:layout_constraintEnd_toEndOf="@+id/tvRegularHoursText"
                app:layout_constraintStart_toStartOf="@+id/tvRegularHoursText"
                app:layout_constraintTop_toBottomOf="@+id/tvRegularHoursText"
                tools:text="02:01" />

            <TextView
                android:id="@+id/tvExtraHoursText"
                style="@style/textViewsTitulosChicosLiquidacion"
                android:layout_marginBottom="@dimen/liquidacion_separacion"
                android:text="@string/horas_extra"
                app:layout_constraintBottom_toTopOf="@+id/tvExtraHoursValue"
                app:layout_constraintEnd_toEndOf="@+id/tvRegularHoursText"
                app:layout_constraintStart_toStartOf="@+id/tvRegularHoursText" />

            <TextView
                android:id="@+id/tvExtraHoursValue"
                style="@style/textViewsValoresLiquidacion"
                android:layout_marginBottom="@dimen/liquidacion_top_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvExtraHoursText"
                app:layout_constraintStart_toStartOf="@+id/tvExtraHoursText"
                tools:text="01:12" />

            <ImageView
                android:id="@+id/chevronImage"
                android:layout_width="39dp"
                android:layout_height="33dp"
                android:layout_marginEnd="16dp"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/chevron"
                app:srcCompat="@drawable/ic_chevron_white36px" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
    </FrameLayout>
