<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:padding="1dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_each_shift">

            <TextView
                android:id="@+id/tvDate"
                style="@style/textViewsTitulosLiquidacion"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="10/03/18" />

            <TextView
                android:id="@+id/tvEntryExitHour"
                style="@style/textViewsFechaLiquidacion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="10:00 - 12:00" />

            <TextView
                android:id="@+id/tvRegularHoursText"
                style="@style/textViewsTitulosChicosLiquidacion"
                android:layout_marginTop="@dimen/liquidacion_top_bottom"
                android:text="@string/horas_regulares"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegularHoursValue"
                style="@style/textViewsValoresLiquidacion"
                android:layout_marginTop="@dimen/liquidacion_separacion"
                app:layout_constraintBottom_toBottomOf="@+id/tvDate"
                app:layout_constraintEnd_toEndOf="@+id/tvRegularHoursText"
                app:layout_constraintStart_toStartOf="@+id/tvRegularHoursText"
                app:layout_constraintTop_toBottomOf="@+id/tvRegularHoursText"
                tools:text="5hs - $30.00" />

            <TextView
                android:id="@+id/tvExtraHoursText"
                style="@style/textViewsTitulosChicosLiquidacion"
                android:text="@string/horas_extra"
                app:layout_constraintBottom_toTopOf="@+id/tvExtraHoursValue"
                app:layout_constraintEnd_toEndOf="@+id/tvRegularHoursValue"
                app:layout_constraintStart_toStartOf="@+id/tvRegularHoursValue" />

            <TextView
                android:id="@+id/tvExtraHoursValue"
                style="@style/textViewsValoresLiquidacion"
                android:layout_marginBottom="@dimen/liquidacion_top_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvExtraHoursText"
                app:layout_constraintStart_toStartOf="@+id/tvExtraHoursText"
                tools:text="2hs - $60.00" />

            <ImageButton
                android:id="@+id/deletedImage"
                android:layout_width="@dimen/width_height_del_image"
                android:layout_height="@dimen/width_height_del_image"
                android:background="@null"
                android:layout_marginEnd="@dimen/margin_std"
                android:layout_marginStart="@dimen/margin_std"
                android:tint="@color/colorAccent"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/deleted_shift"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvRegularHoursValue"
                app:srcCompat="@drawable/ic_round_error_24px" />

        </android.support.constraint.ConstraintLayout>

</FrameLayout>
